--- a/.github/workflows/peakinfer.yml
+++ b/.github/workflows/peakinfer.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   analyze:
     name: LLM Performance Analysis
@@ -14,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run PeakInfer
-        uses: kalmantic/peakinfer-action@v1
+        uses: kalmantic/peakinfer@mtrajanv2-branch
         with:
           path: ./src
           github-token: ${{ secrets.GITHUB_TOKEN }}
