Update workflow with command support and fixed action ref

--- a/.github/workflows/peakinfer.yml
+++ b/.github/workflows/peakinfer.yml
@@ -3,9 +3,11 @@ name: PeakInfer Analysis
 on:
   pull_request:
     branches: [main]
+  issue_comment:
+    types: [created]
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
   issues: write
 
@@ -13,10 +15,19 @@ jobs:
   analyze:
     name: LLM Performance Analysis
     runs-on: ubuntu-latest
+    if: >
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'issue_comment' &&
+       github.event.issue.pull_request &&
+       (contains(github.event.comment.body, '/peakinfer') ||
+        contains(github.event.comment.body, '/fix') ||
+        contains(github.event.comment.body, '/dismiss')))
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event_name == 'issue_comment' && format('refs/pull/{0}/head', github.event.issue.number) || '' }}
 
       - name: Run PeakInfer
         uses: kalmantic/peakinfer@mtrajanv2-branch
